[tool.poetry]
name = "crowdsourced-aipe"
version = "0.1.0"
description = "Our project for the Data & Visual Analytics course."
authors = ["Andrew Getz andrew.getz@gatech.edu"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.0"
numpy = "^1.21"
tqdm = "^4.62"
dash = "^2.16.1"
joblib = "^1.3.2"
pillow = "^10.2.0"
scikit-learn = "^1.4.1"
spacy = "^3.7.4"
torch = "^2.2.1"
torchvision = "^0.17.1"
transformers = "^4.38.2"
datasets = "^2.18.0"